<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearButtonsBar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:flow_horizontalAlign="center"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:contentDescription="@string/save"
            android:src="@drawable/baseline_save_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFreeze"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:contentDescription="@string/freeze_image"
            android:src="@drawable/baseline_lock_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFlashlight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:contentDescription="@string/flashlight_on_off"
            android:src="@drawable/baseline_flashlight_off_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:contentDescription="@string/about_the_app"
            android:src="@drawable/baseline_info_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:contentDescription="@string/exit"
            android:src="@drawable/baseline_exit_to_app_24" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearButtonsBar"/>

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>